<resources>
    <string name="app_name">追影</string>
    <string name="action_login">登录</string>
    <string name="action_logout">注销</string>
    <string name="action_about">关于本软件</string>
    <string name="huodong_time">YYYY-MM-DD HH:MM-HH:MM</string>
    <string name="huodong_price">请说明参加活动可能发生的消费</string>
    <string name="title_activity_login">登录</string>
    <string name="forget_password">忘记密码了</string>
    <!-- Strings related to login -->
    <string name="prompt_email">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="register_code">验证码</string>
    <string name="action_sign_in">注册或登录</string>
    <string name="action_sign_in_short">登录|注册</string>
    <string name="error_invalid_email">用户名错误</string>
    <string name="error_invalid_password">密码长度太短</string>
    <string name="error_incorrect_password">用户名或密码错误</string>
    <string name="error_field_required">这里忘记填了</string>
    <string name="permission_rationale">"请确保拥有此项权限"</string>
    <string name="take_picture">拍照</string>
    <string name="select_local_picture">选择本地图片</string>
    <string name="cancel">取消</string>
    <string name="internet_fail_connect">网络连接失败</string>
    <string name="uploading">正在上传...</string>
    <string name="choose_upload">选择上传图片类型</string>
    <string name="no_more_than_9">对不起，最多只能上传9张图片</string>
    <string name="upload">发表</string>
    <string name="publish_yuepai_sucess">创建约拍成功，上传图片中</string>
    <string name="publish_yuepai_succeed">发布约拍成功</string>
    <string name="publish_huodong_sucess">创建活动成功，上传图片中</string>
    <string name="publish_theme_failure">创建约拍失败</string>
    <string name="playing">正在玩</string>
    <string name="detail">详情</string>
    <string name="input_theme_comment_title">请输入标题</string>
    <string name="input_theme_comment_desc">请输入内容</string>
    <string name="yuepai_create">发起约拍/活动</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_title">条目头部</string>
    <string name="content">条目列表内容</string>
    <string name="head_title">条目标题</string>
    <string name="navi_content">按钮布局</string>
    <string name="photo">图片</string>
    <string name="publish_theme_after_login">请先登录</string>
    <string name="upload_photo">上传头像</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="text_login_btn">  登   录</string>
    <string name="new_user">新用户注册</string>
    <string name="yuepainavi1">约模特</string>
    <string name="action_favorite">收藏</string>
    <string name="action_settings">设置</string>
    <string name="inloading">加载中...</string>
    <string name="yuepai_hint">点击翻开查看</string>
    <string name="huodong_location">活动详细地点正在加载......</string>
    <string name="huodong_usrname">加载中...</string>
    <string name="huodong_settime">发表时间</string>
    <string name="huodong_describe">活动描述信息加载中...</string>
    <string name="join_num">报名</string>
    <string name="yuepai_piarse_num">000</string>
    <string name="yuepai_join_num">00</string>
    <string name="pull_to_load">下拉加载更多</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="favor">喜欢</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">正在获取数据</string>
    <string name="rank_piarse_num">点赞</string>
    <string name="rank_join">报名</string>
    <string name="text_verify_code">获取</string>
    <string name="yuepai_create_theme">请输入标题</string>
    <string name="yuepai_create_label">添加标签</string>
    <string name="start_time">请选择开始时间</string>
    <string name="end_time">请选择结束时间</string>
    <string name="yuepai_theme_location">请详细描述地点信息</string>
    <string name="yuepai_free">免费</string>
    <string name="yuepai_price">请说明报酬</string>
    <string name="create_yuepai_describe">请输入详细介绍及要求</string>
    <string name="addtag">点击选择或添加一个标签</string>
    <string name="tv_yuepai_a">想拍人</string>
    <string name="tv_yuepai_b">想被拍</string>
    <string name="tv_yuepai_c">约拍伴侣</string>
    <string name="tv_create_yuepai">发起约拍/活动</string>
    <string name="join_time">请选择报名截止时间</string>
    <string name="hint_search">查找或输入标签</string>
    <string name="title_activity_navigation_test">NavigationTestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
    <string name="huodong_minp">请输入最小参加人数</string>
    <string name="huodong_maxp">请选择最大参加人数</string>
    <string name="huodong_check_maxp">不限制最大参加人数</string>
    <string name="huodong_free">无花费</string>
    <string name="publish_huodong_succeed">发布活动成功</string>
    <string name="publish_publish_succeed">发布成功</string>
    <string name="detail_text_holder">详细介绍详细介绍详详细介绍详详细介绍详详细介绍详细介</string>
    <string name="detail_text_location_holder">地点信息地点信息地点信息地点信息地点信息</string>
    <string name="detail_text_time_holder">2000-00-00 00:00</string>
    <string name="btn_join_manage">报名用户管理</string>
    <string name="contentDescribe">app</string>
    <string name="title_holder">标题标题标题</string>
    <string name="time_holder">时间时间时间</string>
    <string name="loading">加载中…</string>
    <string name="detail_join_num">报名人数：</string>
    <string name="appname">app</string>
    <string name="chat_with_sponsor">与发起者聊天</string>
    <string name="common_chat">私信</string>
    <string name="layout_otheruser_chat">邀TA约拍</string>
    <string name="pohtoset_edit">编辑  </string>
    <string name="photoset_upload">添加图片/修改描述</string>
    <string name="photoset_delete">删除所选</string>
    <string name="temp">详细介绍详细介绍详详细介绍详详细介绍详详细介绍详细介描述信息描述信息，描述信息，描述。描述信息描述信息描述信息描述信息。</string>
    <string name="temp_time">2017-2-6</string>
    <string name="title_activity_want_be_photograph">我想被摄影师拍</string>
    <string name="title_activity_want_to_photograph">我想拍模特</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="create_yuepai_describe_new">请填写详细介绍及要求，例如是否提供服装、化妆、样片等</string>
    <string name="strholder_photoset1">作品集的标题</string>
    <string name="strholder_photoset2">作品集的内容描述内容描述内容描述</string>
    <string name="self_main">个人主页</string>
    <string name="create_yuepai_entry">发起约拍</string>
    <string name="create_photoset_entry">发布作品集</string>
    <string name="upload_cancel">取消</string>
    <string name="photoself_upload">添加个人照片</string>
    <string name="photoset_overview_upload">添加新作品集</string>
    <drawable name="followt">#ccE6BF66</drawable>
    <drawable name="followf">#cc000000</drawable>


    <string-array name="yuepai_leixing">
        <item>写真客片</item>
        <item>记录随拍</item>
        <item>练手互勉</item>
        <item>活动跟拍</item>
        <item>商业跟拍</item>
    </string-array>

    <string-array name="yuepai_diqu">
        <item>江苏南京</item>
    </string-array>

    <string-array name="yuepai_jiage">
        <item>希望收费</item>
        <item>最多付费</item>
        <item>希望互勉</item>
        <item>价格商议</item>
    </string-array>

</resources>
