<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:yuepai="http://schemas.android.com/apk/res-auto">

    <cn.bingoogolapple.bgabanner.BGABanner
        android:windowTranslucentStatus="true"
        android:windowTranslucentNavigation="true"
        android:layout_height="150dp"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:id="@+id/banner_main_zoom"
        style="@style/BannerDefaultStyle"
        android:layout_gravity="top"
        yuepai:banner_transitionEffect="zoom" />

    <LinearLayout
        android:id="@+id/yuepai_entrance"
        android:layout_below="@id/banner_main_zoom"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="-20dp">
        <LinearLayout
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1">
            <ImageButton
                android:contentDescription="@string/app_name"
                android:id="@+id/btn_yuepai_a"
                android:background="@drawable/shape_round_transp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/button_yuepai_a"
                android:scaleType="centerInside"
                android:layout_marginBottom="-15dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_yuepai_a"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/ee_black"/>
        </LinearLayout>
    <LinearLayout
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1">
        <ImageButton
            android:contentDescription="@string/app_name"
            android:id="@+id/btn_yuepai_b"
            android:background="@drawable/shape_round_transp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/button_yuepai_b"
            android:scaleType="centerInside"
            android:layout_marginBottom="-15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_yuepai_b"
            android:textSize="12sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:textColor="@color/ee_black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageButton
            android:contentDescription="@string/app_name"
            android:background="@drawable/shape_round_transp"
            android:id="@+id/btn_yuepai_c"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/button_yuepai_c"
            android:scaleType="centerInside"
            android:layout_marginBottom="-15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_yuepai_c"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/ee_black"/>
    </LinearLayout>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_weight="1">
        <ImageButton
            android:contentDescription="@string/app_name"
            android:id="@+id/btn_create_yuepai"
            android:background="@drawable/shape_round_transp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/button_create_yuepai"
            android:scaleType="centerInside"
            android:layout_marginBottom="-15dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_create_yuepai"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/ee_black"/>
    </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_below="@id/yuepai_entrance"
        android:id="@+id/fragment_rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>