<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/APimgurl"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/main_picture1"
        android:contentDescription="@string/contentDescribe"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:background="#53000000"
        android:layout_alignBottom="@+id/APimgurl"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"></LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp"
            android:layout_weight="3">
            <ImageButton
                android:id="@+id/APlikeBtn"
                android:layout_width="48dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:background="#00000000"
                android:src="@drawable/praise"
                android:scaleType="centerInside"
                android:contentDescription="@string/contentDescribe"/>

            <TextView
                android:id="@+id/APlikeN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginLeft="-8dp"
                android:textColor="@android:color/white"
                android:text="@string/rank_piarse_num"
                android:layout_gravity="right|center_vertical"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/APlikeBtn"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp"
            android:layout_weight="3">
            <ImageButton
                android:contentDescription="@string/contentDescribe"
                android:id="@+id/APjoinBtn"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="8dp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerInside"
                android:src="@drawable/btn_detail_selector"
                android:background="#00000000"/>

            <TextView
                android:id="@+id/APregistN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/white"
                android:text="@string/rank_join"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"/>

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/yuepai_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/contentDescribe"
            android:id="@+id/user_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="start|top"
            android:background="@drawable/shape_round2"
            android:src="@drawable/personal_default_photo"
            />
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/APtitle"
                android:focusable="false"
                android:layout_gravity="top"
                android:focusableInTouchMode="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/title_holder"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/APstartT"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginBottom="15dp"
                android:text="@string/time_holder"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>